<resources>
    <string name="app_name">GitHub Cloner</string>
    <string name="version">V 1.0.1</string>
    <string name="privacy_policy">https://privacy.akurukb.com/github_cloner.html</string>

    <string name="error_no_data">Error occurred while trying to fetch information!</string>
    <string name="admin">admin</string>
    <string name="that_s_all">That\'s all!</string>
    <string name="loading">Loading</string>
    <string name="octocat">Octocat</string>
    <string name="repositories">Repositories</string>
    <string name="settings">Settings</string>
    <string name="selected">SELECTED</string>
    <string name="tar">TAR</string>
    <string name="zip">ZIP</string>
    <string name="default_branch">Branch :</string>
    <string name="change">Change</string>
    <string name="share_this_repository">Share this repository</string>
    <string name="more">More</string>
    <string name="go_back">Go Back</string>
    <string name="view_on">View on</string>
    <string name="user_or_repository">User or Repository</string>
    <string name="users">Users</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="no_favourites">No Favourites</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!--    Icon by Raj Dev on freeicons.io-->
</resources>