<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:elevation="5dp"
        android:translationZ="4dp"
        style="@style/Theme.GitHubCloner.AppBar">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:padding="3dp"
            android:src="@drawable/ic_back"
            android:clickable="true"
            android:id="@+id/btnBack"
            android:focusable="true"
            android:contentDescription="@string/go_back" />

        <TextView
            style="@style/Theme.GitHubCloner.AppBar"
            android:id="@+id/appBarText"
            android:layout_toEndOf="@id/btnBack"
            android:paddingStart="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Results"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="3dp"
            android:clickable="true"
            android:id="@+id/btnSettings"
            android:focusable="true"
            android:contentDescription="@string/settings" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTotal"
                android:padding="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvResults"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/txtThatsAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/that_s_all"
                android:layout_below="@id/rvResults"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">
        <ImageView
            android:id="@+id/imgOctocat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/octocat" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imgOctocat"
            android:text="@string/loading"/>
    </RelativeLayout>

</RelativeLayout>