<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:elevation="5dp"
        android:translationZ="4dp"
        style="@style/Theme.GitHubCloner.AppBar">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:padding="3dp"
            android:src="@drawable/ic_back"
            android:clickable="true"
            android:id="@+id/btnBack"
            android:focusable="true"
            android:contentDescription="@string/go_back" />

        <TextView
            style="@style/Theme.GitHubCloner.AppBar"
            android:id="@+id/appBarText"
            android:layout_toEndOf="@id/btnBack"
            android:paddingStart="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="About"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="3dp"
            android:clickable="true"
            android:id="@+id/btnSettings"
            android:src="@drawable/ic_more"
            android:focusable="true"
            android:contentDescription="@string/settings" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Developed by"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yohan Sandun Kumaranayake"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Developer contact"/>
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="yohan.sandunk@gmail.com"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#07B2C8"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Official repository"/>
            <TextView
                android:id="@+id/txtViewOnGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View on "
                android:textStyle="bold"
                style="@style/Theme.GitHubCloner.ViewOnGitHub"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your data"/>
            <TextView
                android:id="@+id/txtPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#07B2C8"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnRate"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:text="Rate Us"
                    android:gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/search_btn_bg"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/btnMoreApps"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:text="More Apps"
                    android:gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/search_btn_bg"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>