<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:elevation="5dp"
        android:translationZ="4dp"
        style="@style/Theme.GitHubCloner.AppBar">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:padding="3dp"
            android:src="@drawable/ic_back"
            android:clickable="true"
            android:id="@+id/btnBack"
            android:focusable="true"
            android:contentDescription="@string/go_back" />

        <TextView
            style="@style/Theme.GitHubCloner.AppBar"
            android:id="@+id/appBarText"
            android:layout_toEndOf="@id/btnBack"
            android:paddingStart="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/repositories"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="3dp"
            android:clickable="true"
            android:id="@+id/btnSettings"
            android:focusable="true"
            android:contentDescription="@string/settings" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">
        <RelativeLayout
            android:layout_below="@id/appBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/profileContainer"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.GitHubCloner.Profile"
                android:layout_margin="10dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/txtName"
                    style="@style/Theme.GitHubCloner.Profile.Name"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgAvatar"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtBio"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgAvatar"
                    android:layout_below="@id/txtName"/>
                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgAvatar"
                    android:layout_below="@id/txtBio"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="5dp"/>
                <TextView
                    android:id="@+id/txtFollowers"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtLocation"
                    android:drawableStart="@drawable/ic_follower"
                    android:drawablePadding="5dp"/>
                <TextView
                    android:id="@+id/txtFollowing"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/txtFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtLocation"/>
                <LinearLayout
                    android:id="@+id/userDetailsContainer"
                    android:layout_below="@id/txtFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="5dp"/>
                    <TextView
                        android:id="@+id/txtBlog"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_blog"
                        android:drawablePadding="5dp"/>
                    <TextView
                        android:id="@+id/txtTwitter"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_twitter"
                        android:drawablePadding="5dp"/>
                    <TextView
                        android:id="@+id/txtCompany"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_company"
                        android:drawablePadding="5dp"/>
                </LinearLayout>
                <TextView
                    android:textStyle="italic"
                    android:id="@+id/txtCreated"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userDetailsContainer"
                    />
                <TextView
                    android:background="@drawable/yellow_square"
                    android:id="@+id/txtAdmin"
                    android:textStyle="bold"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:visibility="gone"
                    android:layout_marginStart="3dp"
                    android:textColor="#000"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userDetailsContainer"
                    android:layout_toEndOf="@id/txtCreated"
                    android:text="@string/admin"
                    />
                <TextView
                    android:id="@+id/txtRepos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtCreated"
                    android:padding="10dp"
                    style="@style/Theme.GitHubCloner.Counter"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/txtGists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtCreated"
                    android:layout_toEndOf="@id/txtRepos"
                    android:padding="10dp"
                    style="@style/Theme.GitHubCloner.Counter"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/recyclerRepositories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profileContainer"/>

            <TextView
                android:id="@+id/txtThatsAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/that_s_all"
                android:layout_below="@id/recyclerRepositories"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">
        <ImageView
            android:id="@+id/imgOctocat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/octocat" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imgOctocat"
            android:text="@string/loading"/>
    </RelativeLayout>

</RelativeLayout>